--- a/house.ipynb
+++ b/house.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "25533de3-4d83-41f1-b74e-7dc884b01014",
    "metadata": {
     "tags": []
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "fd99bbbc-43da-465e-9a71-38416062d044",
    "metadata": {
     "tags": []
@@ -56,116 +56,236 @@
        "      <th>bedrooms</th>\n",
        "      <th>bathrooms</th>\n",
        "      <th>stories</th>\n",
+       "      <th>mainroad</th>\n",
+       "      <th>guestroom</th>\n",
+       "      <th>basement</th>\n",
+       "      <th>hotwaterheating</th>\n",
+       "      <th>airconditioning</th>\n",
        "      <th>parking</th>\n",
+       "      <th>prefarea</th>\n",
+       "      <th>furnishingstatus</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>5.450000e+02</td>\n",
-       "      <td>545.000000</td>\n",
-       "      <td>545.000000</td>\n",
-       "      <td>545.000000</td>\n",
-       "      <td>545.000000</td>\n",
-       "      <td>545.000000</td>\n",
+       "      <th>0</th>\n",
+       "      <td>13300000</td>\n",
+       "      <td>7420</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>2</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>furnished</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>4.766729e+06</td>\n",
-       "      <td>5150.541284</td>\n",
-       "      <td>2.965138</td>\n",
-       "      <td>1.286239</td>\n",
-       "      <td>1.805505</td>\n",
-       "      <td>0.693578</td>\n",
+       "      <th>1</th>\n",
+       "      <td>12250000</td>\n",
+       "      <td>8960</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>3</td>\n",
+       "      <td>no</td>\n",
+       "      <td>furnished</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>1.870440e+06</td>\n",
-       "      <td>2170.141023</td>\n",
-       "      <td>0.738064</td>\n",
-       "      <td>0.502470</td>\n",
-       "      <td>0.867492</td>\n",
-       "      <td>0.861586</td>\n",
+       "      <th>2</th>\n",
+       "      <td>12250000</td>\n",
+       "      <td>9960</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>no</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>2</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>semi-furnished</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>1.750000e+06</td>\n",
-       "      <td>1650.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <th>3</th>\n",
+       "      <td>12215000</td>\n",
+       "      <td>7500</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>no</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>no</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>3</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>furnished</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>3.430000e+06</td>\n",
-       "      <td>3600.000000</td>\n",
-       "      <td>2.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <th>4</th>\n",
+       "      <td>11410000</td>\n",
+       "      <td>7420</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>no</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>2</td>\n",
+       "      <td>no</td>\n",
+       "      <td>furnished</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>4.340000e+06</td>\n",
-       "      <td>4600.000000</td>\n",
-       "      <td>3.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>2.000000</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>5.740000e+06</td>\n",
-       "      <td>6360.000000</td>\n",
-       "      <td>3.000000</td>\n",
-       "      <td>2.000000</td>\n",
-       "      <td>2.000000</td>\n",
-       "      <td>1.000000</td>\n",
+       "      <th>540</th>\n",
+       "      <td>1820000</td>\n",
+       "      <td>3000</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>no</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>2</td>\n",
+       "      <td>no</td>\n",
+       "      <td>unfurnished</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>1.330000e+07</td>\n",
-       "      <td>16200.000000</td>\n",
-       "      <td>6.000000</td>\n",
-       "      <td>4.000000</td>\n",
-       "      <td>4.000000</td>\n",
-       "      <td>3.000000</td>\n",
+       "      <th>541</th>\n",
+       "      <td>1767150</td>\n",
+       "      <td>2400</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>0</td>\n",
+       "      <td>no</td>\n",
+       "      <td>semi-furnished</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>542</th>\n",
+       "      <td>1750000</td>\n",
+       "      <td>3620</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>0</td>\n",
+       "      <td>no</td>\n",
+       "      <td>unfurnished</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>543</th>\n",
+       "      <td>1750000</td>\n",
+       "      <td>2910</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>0</td>\n",
+       "      <td>no</td>\n",
+       "      <td>furnished</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>544</th>\n",
+       "      <td>1750000</td>\n",
+       "      <td>3850</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>0</td>\n",
+       "      <td>no</td>\n",
+       "      <td>unfurnished</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>545 rows × 13 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "              price          area    bedrooms   bathrooms     stories  \\\n",
-       "count  5.450000e+02    545.000000  545.000000  545.000000  545.000000   \n",
-       "mean   4.766729e+06   5150.541284    2.965138    1.286239    1.805505   \n",
-       "std    1.870440e+06   2170.141023    0.738064    0.502470    0.867492   \n",
-       "min    1.750000e+06   1650.000000    1.000000    1.000000    1.000000   \n",
-       "25%    3.430000e+06   3600.000000    2.000000    1.000000    1.000000   \n",
-       "50%    4.340000e+06   4600.000000    3.000000    1.000000    2.000000   \n",
-       "75%    5.740000e+06   6360.000000    3.000000    2.000000    2.000000   \n",
-       "max    1.330000e+07  16200.000000    6.000000    4.000000    4.000000   \n",
+       "        price  area  bedrooms  bathrooms  stories mainroad guestroom basement  \\\n",
+       "0    13300000  7420         4          2        3      yes        no       no   \n",
+       "1    12250000  8960         4          4        4      yes        no       no   \n",
+       "2    12250000  9960         3          2        2      yes        no      yes   \n",
+       "3    12215000  7500         4          2        2      yes        no      yes   \n",
+       "4    11410000  7420         4          1        2      yes       yes      yes   \n",
+       "..        ...   ...       ...        ...      ...      ...       ...      ...   \n",
+       "540   1820000  3000         2          1        1      yes        no      yes   \n",
+       "541   1767150  2400         3          1        1       no        no       no   \n",
+       "542   1750000  3620         2          1        1      yes        no       no   \n",
+       "543   1750000  2910         3          1        1       no        no       no   \n",
+       "544   1750000  3850         3          1        2      yes        no       no   \n",
        "\n",
-       "          parking  \n",
-       "count  545.000000  \n",
-       "mean     0.693578  \n",
-       "std      0.861586  \n",
-       "min      0.000000  \n",
-       "25%      0.000000  \n",
-       "50%      0.000000  \n",
-       "75%      1.000000  \n",
-       "max      3.000000  "
+       "    hotwaterheating airconditioning  parking prefarea furnishingstatus  \n",
+       "0                no             yes        2      yes        furnished  \n",
+       "1                no             yes        3       no        furnished  \n",
+       "2                no              no        2      yes   semi-furnished  \n",
+       "3                no             yes        3      yes        furnished  \n",
+       "4                no             yes        2       no        furnished  \n",
+       "..              ...             ...      ...      ...              ...  \n",
+       "540              no              no        2       no      unfurnished  \n",
+       "541              no              no        0       no   semi-furnished  \n",
+       "542              no              no        0       no      unfurnished  \n",
+       "543              no              no        0       no        furnished  \n",
+       "544              no              no        0       no      unfurnished  \n",
+       "\n",
+       "[545 rows x 13 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df = pd.read_csv(r'C:\\Users\\OS\\Desktop\\Workspace\\hapt\\Housing.csv')\n",
-    "df.describe()"
+    "df"
    ]
   },
   {
@@ -197,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "5e8cba60-1bf3-4dda-89c5-26247cb12a3e",
    "metadata": {
     "tags": []
@@ -216,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "1e8e80ae-50af-4d85-b38f-36cf460cdfea",
    "metadata": {
     "tags": []
@@ -229,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "9d8a33b0-1237-44e1-b473-706773d193cb",
    "metadata": {
     "tags": []
@@ -533,7 +653,7 @@
        "[530 rows x 15 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -544,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "91aa0063-8e28-4c5d-986f-c2705ea89009",
    "metadata": {
     "tags": []
@@ -572,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "6f3a8494-0458-4113-a1f5-17dfd452de85",
    "metadata": {
     "tags": []
@@ -598,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "d52ba7a8-3dbf-483c-9c1a-c049e8a64dee",
    "metadata": {
     "tags": []
@@ -624,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "id": "4f7fe52e-1d16-43bd-bddd-583ee09feef3",
    "metadata": {
     "tags": []
@@ -634,7 +754,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Root Mean Squared Error (RMSE): 904287.2160038693\n"
+      "Root Mean Squared Error (RMSE): 918697.6711635431\n"
      ]
     }
    ],
@@ -654,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "id": "98b53b19-1c75-4779-a4f6-9281d57e6915",
    "metadata": {
     "tags": []
@@ -664,7 +784,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicted price: 7861982.8\n"
+      "Predicted price: 7769438.6\n"
      ]
     }
    ],
